AE2: Se consiguen recuperar todos los datos de cada tabla, tanto la totalidad de estos (recuperando una Lista como pide el ejercicio) como de forma individual (obteniendo un único resultado indicando el ID). Se comprueba mediante Postman que se recibe correctamente el JSON. OBSERVACIÓN: Cuando se pide recuperar un Usuario mediante su ID este empieza con el índice 0 (seguramente porque su campo clave es un string en vez de un entero autoincrementativo), en el resto de tablas empiezan con índice 1, pese a esto se pueden recuperar los datos sin problemas.

--- a/PlaceMyBet/PlaceMyBet/PlaceMyBet.csproj
+++ b/PlaceMyBet/PlaceMyBet/PlaceMyBet.csproj
@@ -202,14 +202,26 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Common\BBDD.cs" />
+    <Compile Include="Controllers\ApuestasController.cs" />
+    <Compile Include="Controllers\CuentasController.cs" />
     <Compile Include="Controllers\EventosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MercadosController.cs" />
+    <Compile Include="Controllers\UsuariosController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Apuesta.cs" />
+    <Compile Include="Models\ApuestasRepository.cs" />
+    <Compile Include="Models\Cuenta.cs" />
+    <Compile Include="Models\CuentasRepository.cs" />
     <Compile Include="Models\Evento.cs" />
     <Compile Include="Models\EventosRepository.cs" />
+    <Compile Include="Models\Mercado.cs" />
+    <Compile Include="Models\MercadosRepository.cs" />
+    <Compile Include="Models\Usuario.cs" />
+    <Compile Include="Models\UsuariosRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
