--- a/PlaceMyBet/PlaceMyBet/PlaceMyBet.csproj
+++ b/PlaceMyBet/PlaceMyBet/PlaceMyBet.csproj
@@ -326,6 +326,7 @@
     <Compile Include="Controllers\ApuestasController.cs" />
     <Compile Include="Controllers\CuentasController.cs" />
     <Compile Include="Controllers\EventosController.cs" />
+    <Compile Include="Controllers\EventosExamenController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MercadosController.cs" />
     <Compile Include="Controllers\UsuariosController.cs" />
@@ -345,6 +346,8 @@
     <Compile Include="Models\Cuenta.cs" />
     <Compile Include="Models\CuentasRepository.cs" />
     <Compile Include="Models\Evento.cs" />
+    <Compile Include="Models\EventoExamen.cs" />
+    <Compile Include="Models\EventosExamenRepository.cs" />
     <Compile Include="Models\EventosRepository.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Mercado.cs" />
