--- a/PlaceMyBet/PlaceMyBet/packages.config
+++ b/PlaceMyBet/PlaceMyBet/packages.config
@@ -11,6 +11,7 @@
   <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core.es" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net472" />
@@ -28,6 +29,7 @@
   <package id="Microsoft.AspNet.WebApi.Client.es" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core.es" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Owin.es" version="5.2.7" targetFramework="net472" />
